--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,1 +1,3 @@
-student=name.zhangsan
+spring.datasource.url=jdbc:mysql://localhost:3306/bookkeeping?characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
